- fixed bug with hangling of WM_COMMAND update in client.c (Andrew M. Langmead <aml@world.std.com>)
- fixed bug with incorrect reading of ppm files (Adam Fedor <fedor@gnu.org>)
- fixed bug with incorrect window placement using automatic placement, while
  there were shaded windows on other workspaces
- fixed some buffer overflow issues in WINGs


Changes since version 0.62.0:
.............................
- made shortcuts available during alt+tab
- save lowered state of menus
- fixed portability bugs for old X servers
- added check for XInternAtoms in configure and replacement code
- fixed window cycling with single key shortcut
- fixed WPrefs crash on menu editor
- install only needed icons for WPrefs.app
- updated Finnish translations
- fixed user-whining-windoze-cycling bug
- added option for f'n windoze cycling..
- added --create-stdcmap and made std colormap creation off by default
- updated get/setstyle to account for new options
- fixed crash on restart bug
- made GNOME wm hints take precedence over KDE.. KDE hint will only be read
  if GNOME hints dont exist
- updated kwm hint support (maximize hint)
- added memory usage in info panel
- fixed sticky hint handling in GNOME
- fixed saving of maximized state for restart

Changes since version 0.61.1:
.............................

- fixed bug with menu editor in WPrefs placing cut/paste-ed entries in wrong
  positions.
- removed "Keep Attracted Icons" option from Clip's menu. See NEWS.
- fixed bug in Xdnd code to be able to work with QT. (This is QT's bug so
  it will change again in future)
- replaced debugging output stuff with Nana
- fixed problem with session restoring and dock autolaunch (Jacek Naglak
							<nag@promail.pl>)
- put WorkspaceNamePosition in WPrefs
- added a lock to docked icons
- fixed crashing bug in WPrefs.app's Appearance section.
- fixed sorting of names in icon chooser, and file browser.
- fixed name completion problem in file browser.
- added new sound events (from pascal)