@@ -21,6 +21,8 @@ Changes since version 0.62.1:
 - fixed bug with incorrect window placement using automatic placement, while
   there were shaded windows on other workspaces
 - fixed some buffer overflow issues in WINGs
+- fixed bug with WPrefs.app not selecting the menu appearance options after 
+  startup.
 
 
 Changes since version 0.62.0:
